:wrench: updating styles and text display

--- a/etaamb/css/style.css
+++ b/etaamb/css/style.css
@@ -1,5 +1,5 @@
 /* Global Css File for Etaamb */
-
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Lato:wght@100;300;400;700;900&family=Lato:wght@100;300;400;700;900&display=swap');
 /********************* Temporary stuff */
 #info_just {
     width: 45em;
@@ -11,9 +11,9 @@
 }
 
 #info_just a {
-    font-family: georgia;
+    font-family: 'Merriweather', georgia, serif;
     font-weight: bold;
-    font-size:16pt;
+    font-size:1rem;
     color: #fff;
     text-decoration: none;
     border-bottom: 1px dotted #fff;
@@ -29,8 +29,9 @@ html { position:relative;min-height:100%;}
 body {
     margin:0 0 14px;padding:0;
     height:100%;
+    font-size:16px;
     background-color:#b2d2ec;
-	font-family:verdana, sans-serif;
+	font-family:'Lato', verdana, sans-serif;
     }
 
 #main {
@@ -51,7 +52,7 @@ h2 {
 	padding:0;
 	margin-top:21px;
 	color:#28699e;
-	font-size:24px;
+	font-size:1.5rem;
 	}
 
 
@@ -64,9 +65,9 @@ div#up_arrow { display:none;}
 /********************* Header */
 #etaamb_title {
 	z-index:0;
-    font-family:georgia,serif;
+    font-family:'Merriweather', georgia, serif;
     color:#72acdc;
-	font-size:40px;
+	font-size:2.5rem;
     position:absolute;
     overflow:hidden;
 	top:-22px;
@@ -123,8 +124,8 @@ div#up_arrow { display:none;}
 			text-decoration:none;	
 			color:#8fbde3;
 			text-transform:uppercase;
-			font-family:helvetica,arial,sans-serif;
-			font-size:11px;
+			font-family:'Lato', helvetica,arial,sans-serif;
+			font-size:0.68rem;
 			display:inline;
 			float:none;
 			text-align:inherit;
@@ -156,8 +157,8 @@ div#up_arrow { display:none;}
 	div#priv_menu a {
     	    color:#410;
 			text-decoration:none;
-    	    font-family:helvetica,arial,sans-serif;
-			font-size:11px;
+    	    font-family:'Lato', helvetica,arial,sans-serif;
+			font-size:0.68rem;;
 			text-transform:uppercase;
 			float:none;
 			text-align:inherit;
@@ -188,8 +189,8 @@ div#up_arrow { display:none;}
 		div#menu a {
     	    color:#8fbde3;
 			text-decoration:none;
-    	    font-family:helvetica,arial,sans-serif;
-			font-size:11px;
+    	    font-family:'Lato', helvetica,arial,sans-serif;
+			font-size:0.68rem;;
 			text-transform:uppercase;
 			float:none;
 			text-align:inherit;
@@ -209,8 +210,8 @@ div#up_arrow { display:none;}
 		width:auto;
 		height:17px;
 		background-color:transparent;
-		font-family:helvetica,arial,sans-serif;
-		font-size:11px;
+		font-family:'Lato', helvetica,arial,sans-serif;
+		font-size:0.68rem;;
 		padding:0px 6px 3px 4px;
 		top:3px;
 		overflow:hidden;
@@ -228,8 +229,8 @@ div#up_arrow { display:none;}
 	        color:#fff;
 			text-decoration:none;
 			text-transform:uppercase;
-	        font-family:helvetica,arial,sans-serif;
-			font-size:11px;
+	        font-family:'Lato', helvetica,arial,sans-serif;
+			font-size:0.68rem;;
 			padding:0 2px;
 			}
 	
@@ -247,7 +248,7 @@ div#up_arrow { display:none;}
 			border: 2px solid #86AFCE;
 			border-left-width:3px;
 			border-right:0;
-			font-size:12px;
+			font-size:0.68rem;
 			padding:1px 3px 1px;
 			margin:0;
 			border-bottom-left-radius:3px;
@@ -260,8 +261,8 @@ div#up_arrow { display:none;}
 			color:#fff;
 			text-decoration:none;
 			text-transform:uppercase;
-	        font-family:helvetica,arial,sans-serif;
-			font-size:11px;
+	        font-family:'Lato', helvetica,arial,sans-serif;
+			font-size:0.68rem;;
 			padding:0px 2px 0px 4px;
 			top:0px;
 			height:20px;
@@ -364,7 +365,7 @@ div.quickmenu {
 		float:left }
 	ul.quickmenu li a {
 		margin:0 7px;
-		font-family:georgia, serif;
+		font-family:'Merriweather', georgia, serif;
 		text-decoration:none;
 		font-weight:bold;
 		color:#184060;
@@ -386,7 +387,7 @@ div.index_table  {
 		padding:0;
 		margin-top:40px;
 		color:#28699e;
-		font-size:32px;
+		font-size:1.25rem;;
 		/*border-bottom:1px dashed #72acdc;*/
 		}
 
@@ -439,7 +440,7 @@ div.index_table  {
 	
 	span.m_number {
 		text-align:center;
-		font-size:11px;
+		font-size:0.68rem;;
 		}
 	span.m_name {
 		text-align:center;
@@ -450,11 +451,11 @@ div#last_edition {
     }
 
 div#last_edition h1:first-child {
-    font-size:32px;
+    font-size:1.25rem;;
     }
 
 div#last_edition h1 {
-    font-size:18px;
+    font-size:1.125rem;
     }
 
 /*
@@ -493,7 +494,7 @@ td.validDay {
 	}
 /******************** datePage */
 span.datepage_title {
-	font-size:32px;
+	font-size:1.25rem;;
 	color:#28699E;
 	margin:21px 0 0;
 	padding:0;
@@ -522,7 +523,7 @@ table.calendar {
 table.calendar caption {
 	font-weight:bold;
 	color:#28699e;
-	font-size:14pt;
+	font-size:.9rem;
 	}
 
 table.calendar caption a {
@@ -626,8 +627,8 @@ table.doclink {
 
 	.doclink th,
 	.doclink span.title {
-        font-family:verdana, sans-serif;
-        font-size:9px;
+        font-family:'Lato', verdana, sans-serif;
+        font-size:0.56rem;
         text-align:left;
         width:45px;
         color:#8fbde3;
@@ -636,8 +637,8 @@ table.doclink {
         }
 
 	.doclink span.doctitle {
-        font-family:verdana,sans-serif;
-        font-size:11px;
+        font-family:'Lato', verdana,sans-serif;
+        font-size:0.68rem;;
         color:#184060;
 		font-weight:bold;
         padding:2px 7px 0 7px;
@@ -645,9 +646,9 @@ table.doclink {
 
     .doclink td.title,
 	.doclink span.maintitle {
-        /*font-family:georgia,serif;*/
-        font-family:verdana,sans-serif;
-        font-size:12px;
+        /*font-family:'Merriweather', georgia, serif,serif;*/
+        font-family:'Lato', verdana,sans-serif;
+        font-size:0.75rem;;
 		line-height:16px;
         /*
         border-left: 1px solid #b2d2ec;
@@ -672,8 +673,8 @@ table.doclink {
 	.doclink span.source {
         color:#8fbde3;
         color:#28699e;
-        font-family:georgia,serif;
-        font-size:12px;
+        font-family:'Merriweather', georgia, serif;
+        font-size:0.75rem;;
 		width:auto;
         }
 
@@ -681,13 +682,13 @@ table.doclink {
 	.doclink span.type {
         color:#8fbde3;
         color:#28699e;
-        font-family:georgia,serif;
-        font-size:12px;
+        font-family:'Merriweather', georgia, serif;
+        font-size:0.75rem;;
         }
 	.doclink td.date ,
 	.doclink span.date {
-        font-family:helvetica, sans-serif;
-        font-size:12px;
+        font-family:'Lato', helvetica, sans-serif;
+        font-size:0.75rem;;
         width:80px;
         font-weight:bold;
         color:#184060;
@@ -695,8 +696,8 @@ table.doclink {
 
 	.doclink td.numac,
     .doclink span.numac {
-        font-family:helvetica, sans-serif;
-        font-size:10px;
+        font-family:'Lato', helvetica, sans-serif;
+        font-size:0.62rem;
         width:80px;
         color:#555;
         }
@@ -731,7 +732,7 @@ table.doclink {
 		}
 /******************** Document/Numac */
 div.document_title {
-	font-size:32px;
+	font-size:1.25rem;;
 	color:#28699E;
 	/*margin:21px 0 0;*/
 	margin-bottom:21px;
@@ -768,54 +769,62 @@ div.document {
     }
 
     div.document h1.doc_title {
-        font-family:georgia,serif;
+        font-family:'Merriweather', georgia, serif;
         text-align:center;
+        padding:0 2rem;
         font-weight:bold;
-        font-size:16px;
+        font-size:1rem;
         }
 
-    div.document dt {
-        display:inline;
-        color:#555;
-        font-size:11px;
-        font-family:helvetica,sans-serif;
-        }
 	div.document dt.break{
-		display:block;
+		display:none;
 		}
 
+    div.document dl {
+        display:flex;
+        flex-flow: row wrap;
+        margin:1rem 0 2rem;
+    }
+
+
+    div.document dt {
+        flex-basis:10%;
+        text-align:right;
+        color:#555;
+        font-size:.8rem;
+        padding:2px 4px;
+        font-family:'Lato', helvetica,sans-serif;
+        }
+
     div.document dd {
-        display:inline;
+        flex-basis:80%;
+        flex-grow:1;
+        margin:0;
+        font-size:.8rem;
         text-align:left;
-        margin-left:4px;
-        
+        padding:2px 4px;
         }
 
     dd.date {
-        font-family:helvetica, sans-serif;
-        font-size:12px;
-        width:80px;
+        font-family:'Lato', helvetica, sans-serif;
         font-weight:bold;
         color:#333;
         }
 
     dd.numac {
-        font-family:helvetica, sans-serif;
-        font-size:12px;
-        width:80px;
+        font-family:'Lato', helvetica, sans-serif;
         color:#555;
         }
 
     dd.source {
         color:#8fbde3;
         color:#28699e;
-        font-family:georgia,serif;
-        font-size:14px;
+        font-family:'Merriweather', georgia, serif;
         }
 
+    dd.doc_url a,
     dd.moniteur_url a {
         font-family:courrier,monospace;
-        font-size:10px;
         color:#4894ff;
         }
 
@@ -826,11 +835,14 @@ div.document {
 		}
 
     div.document_text {
-        font-family:georgia, serif;
-        font-size:13px;
-        line-height:18px;
-        padding-left:14px;
-        max-width:42em;
+        font-family: 'Merriweather', georgia, serif;
+        font-family: 'Lato', verdana, sans-serif;
+        font-size:.875rem;
+        line-height:1.3rem;
+        padding-left:.875rem;
+        max-width:42rem;
+        font-weight:400;
+        color:#010106;
         }
 
 div.right_panel {
@@ -867,7 +879,7 @@ div.etaamb_description b { color:#184060; }
 
 div.linkedListDesc {
 	color:#184060;
-	font-size:24px;
+	font-size:1.5rem;
 	margin-top:14px;
 	}
 
@@ -916,7 +928,7 @@ span.link .close {
 	display:block;
 	text-align:center;
 	color:#184060;
-	font-family:verdana,monospace;
+	font-family:'Lato', verdana,monospace;
 	cursor:pointer;
 	cursor:hand;
 	}
@@ -925,7 +937,7 @@ span.link .listtitle{
 	display:block;
 	text-align:center;
 	color:#184060;
-	font-family:verdana,monospace;
+	font-family:'Lato', verdana,monospace;
 	font-weight:bold;
 	}
 
@@ -944,9 +956,9 @@ span.link .listtitle{
 		}
 
 	#tagwords li {
-		font-size:14px;
+		font-size:.9rem;
 		text-align:right;
-		font-family:georgia;
+		font-family:'Merriweather', georgia, serif;
 		border-right: 2px solid #72acdc;
 		padding-right: 2px;
 		margin-bottom: 2px;
@@ -954,7 +966,7 @@ span.link .listtitle{
 
 	#tagwords h3 {
 		margin:0;
-		font-size:12px;
+		font-size:0.75rem;;
 		text-align:left;
 		}
 
@@ -973,13 +985,13 @@ div.referer_data {
 	border-radius:8px;
 	color:#b9d3ee;
 	padding:0px 10px 40px;
-	font-size:16px;
+	font-size:1rem;
 	position:relative;
 	}
 
 	div.referer_data .refererdatadesc {
 		color:#72acdc;
-		font-size:24px;
+		font-size:1.5rem;
 		margin-top:14px;
 		position:relative;
 		}
@@ -1014,29 +1026,29 @@ span.keyw_3 { background-color:#d0fffe; }
 /******************** Error page */
 div.err_div h1 {
 	color:#4682b4;
-	font-size:50px;
+	font-size:3.125rem;
 	}
 
 div.err_div h2 {
 	color:#4682b4;
-	font-size:20px;
+	font-size:1.3rem;
 	}
 
 
 div.err_div p {
 	color:#184060;
-	font-size:16px;
+	font-size:1rem;
 	}
 
 div.err_div p.reason {
-	font-size:20px;
+	font-size:1.3rem;
 	color:#184060;
 	margin-bottom:40px;
 	}
 
 div.err_div pre {
 	color:#4682b4;
-	font-size:20px;
+	font-size:1.3rem;
 	font-weight:bold;
 	}
 
@@ -1049,6 +1061,7 @@ div#debug {
 	font-family:monospace;
 	color:#000;
 	overflow-y:scroll;
+    max-width:60%;
 	border-bottom:2px solid #000;
 	}
 
@@ -1066,7 +1079,7 @@ div#debug.full { max-height:100%; }
 
 	div#debug h1 {
 		line-height:14px;
-		font-size:14px;
+		font-size:.8rem;
 		margin:0;padding:0;
 		display:inline;
 		}
@@ -1090,68 +1103,6 @@ div#debug.full { max-height:100%; }
 		font-weight:bold;
 		}
 	
-/*********************** Hire Window */
-div#hire_window
-	{
-	display:none;
-	font-family:verdana;
-	position:absolute;
-	text-align:left;
-	background-color:#444;
-	width:800px;
-	height:350px;
-	left:50%;
-	top: 50%;
-	margin-left:-414px;
-	margin-top:-200px;
-	font-size:11pt;
-	color:#fff;
-	padding:15px;
-	border:3px solid #222;
-	border-radius:8px;
-	-moz-border-radius:8px;
-	-webkit-border-bottom-radius:8px;
-	}
-div#hire_window ul {
-	list-style-type:square;
-	}
-
-div#hire_window h1 {
-	line-height:18px;
-	font-size:18pt;
-	font-weight:normal;
-	position:relative;
-	margin-top:-6px;
-	}
-
-a#hire_close {
-	position:absolute;
-	top:0;
-	right:0;
-	color:#fff;
-	text-decoration:none;
-	font-family:sans-serif;
-	height:1em;
-	line-height:1em;
-	width:.7em;
-	}
-
-a#hire_contact {
-	text-decoration:none;
-	color:#fff;
-	font-size:18pt;
-	position:absolute;
-	right:20px;
-	bottom:13px;
-	padding:4px;
-	border:2px solid #444;
-	line-height:.9em;
-	}
-
-	a#hire_contact:hover {
-		border-color:#fff;
-		}
-
 /********************** Private Life */
 div#private_life
 	{
@@ -1166,7 +1117,7 @@ div#private_life
 	top: 50%;
 	margin-left:-414px;
 	margin-top:-200px;
-	font-size:11pt;
+	font-size:.7rem;
 	color:#fff;
 	padding:15px;
 	border:3px solid #222;
@@ -1178,7 +1129,7 @@ div#private_life
 
 div#private_life h1 {
 	line-height:18px;
-	font-size:18pt;
+	font-size:1.2rem;
 	font-weight:normal;
 	position:relative;
 	margin-top:-6px;
@@ -1199,7 +1150,7 @@ a#private_close {
 a#private_send {
 	text-decoration:none;
 	color:#fff;
-	font-size:18pt;
+	font-size:1.2rem;
 	position:absolute;
 	right:20px;
 	bottom:13px;
@@ -1220,7 +1171,7 @@ div#private_life th {
 	}
 
 div#private_life td.priv_data {
-	font-size:12px;
+	font-size:0.75rem;;
 	}
 
 div#private_life input,
@@ -1228,8 +1179,8 @@ div#private_life textarea {
 	width:300px;
 	border:1px solid #222;
 	padding:2px;
-	font-family:verdana;
-	font-size:12px;
+	font-family:'Lato', verdana;
+	font-size:0.75rem;;
 	}
 
 div#private_life textarea {height:100px;}
@@ -1249,14 +1200,14 @@ div#private_life textarea {height:100px;}
 #footer_menu {
     padding-left:30px;
     color:#fff;
-    font-family:verdana;
-    font-size:8pt;
+    font-family:'Lato', verdana;
+    font-size:.6rem;
     }
 
 #footer_menu a {
     color:#fff;
-    font-family:verdana;
-    font-size:8pt;
+    font-family:'Lato', verdana;
+    font-size:.6rem;
     text-decoration:none;
     }
 
