--- a/etaamb/css/smphone.css
+++ b/etaamb/css/smphone.css
@@ -34,12 +34,15 @@ body {
     height:100%;
 	width:100%;
     background-color:#b2d2ec;
+    background-image:url("/img/oj_etaamb_back.png");
 	font-family:verdana, sans-serif;
     }
+
 #main {
 	padding-left:4px;
 	padding-bottom:28px;
 	margin-top:58px;
+    background-image:url("/img/oj_etaamb_back.png");
 	}
 
 
