--- a/etaamb/css/large.css
+++ b/etaamb/css/large.css
@@ -1,17 +1,17 @@
-body div.document {
+body .document {
     width:auto;
     min-width:45em;
     margin-right:38em;
     }
 
-body div.right_panel {
+body .right_panel {
     width:auto;
     max-width:36em;
     margin:0;
     right:0;
     }
 
-body div.document_text {
+body .document_text {
     width:auto;
     max-width:none;
     padding-right:14px;
